Bug 153859 - Collapses when Data range is set and clears the table used for chart data.
Summary: Collapses when Data range is set and clears the table used for chart data.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: Chart Crash
  Show dependency treegraph
 
Reported: 2023-02-27 14:16 UTC by NISZ LibreOffice Team
Modified: 2023-03-07 16:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test file (18.17 KB, application/vnd.oasis.opendocument.text)
2023-02-27 14:16 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-02-27 14:16:01 UTC
Description:
A graph plotted from the table data will crash if Data range is set and clears the table data used for the graph.

Steps to Reproduce:
1: Create a table with random data
2: Create a chart from it.
3: Set the Data range.
4: Delete the table.
5: Double-click on the chart.

Actual Results:
The system crashes.

Expected Results:
There is no crash.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a235634ca5761aa4b330ebf7e3a2083b7db1606
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-02-27 14:16:17 UTC
Created attachment 185615 [details]
Test file
Comment 2 László Németh 2023-02-27 22:46:21 UTC
Missing step to reproduce:

6. Choose Data Ranges... in the context menu.

Note: if the build doesn't contain to fix for tdf#153858, don't use the mouse after the click, only the key for the context menu to avoid of the crash related to the mouse moving over the edited chart.
Comment 3 Commit Notification 2023-02-27 22:47:09 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e706698353a7187f46ddbf0faf1f6f7772753df6

tdf#153859 sw: crash fix for setting chart with deleted data table

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-07 16:51:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ad3fe5c2e71deb7cd51d40549331371022cfb3b4

tdf#153859 sw: crash fix for setting chart with deleted data table

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.