tdf#153859 sw: crash fix for setting chart with deleted data table

Opening Data Ranges dialog window of a chart with
deleted data table crashed Writer immediately.

Follow-up to commit 5b9855acc7fa6d1e4a5f53ff0bc47e1dd4729827
"tdf#132714 sw: fix crash at table row deletion associated
to a chart".

Change-Id: I96e901db75d40ae234f58827a957204bca13aa92
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147893
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit e706698353a7187f46ddbf0faf1f6f7772753df6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147904
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>